// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign-in in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e4e4e7",
                  "borderRadius": 22,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <Image
                accessibilityLabel="Expyrico"
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../apps/mobile/assets/logo-mark.png",
                  }
                }
                style={
                  {
                    "borderRadius": 11.88,
                    "height": 54,
                    "width": 54,
                  }
                }
              />
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#0a0a0a",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "#71717a",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#71717a",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#71717a"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e4e4e7",
                      "borderRadius": 14,
                      "color": "#0a0a0a",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#71717a",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#71717a"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e4e4e7",
                      "borderRadius": 14,
                      "color": "#0a0a0a",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#fbbf24",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e4e4e7",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e4e4e7",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#71717a",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e4e4e7",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0a0a0a",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e4e4e7",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`sign-in in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#fde0c2",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <Image
                accessibilityLabel="Expyrico"
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../apps/mobile/assets/logo-mark.png",
                  }
                }
                style={
                  {
                    "borderRadius": 11.88,
                    "height": 54,
                    "width": 54,
                  }
                }
              />
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#5b3a1f",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "#a47148",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#a47148",
                      "fontSize": 13,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#a47148"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#fde0c2",
                      "borderRadius": 16,
                      "color": "#5b3a1f",
                      "fontSize": 17,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#a47148",
                      "fontSize": 13,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#a47148"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#fde0c2",
                      "borderRadius": 16,
                      "color": "#5b3a1f",
                      "fontSize": 17,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#fbbf24",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#fde0c2",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#fde0c2",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#a47148",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#fde0c2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#ea580c",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#ea580c",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#fde0c2",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`sign-in in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "rgba(255,255,255,0.08)",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <Image
                accessibilityLabel="Expyrico"
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../apps/mobile/assets/logo-mark.png",
                  }
                }
                style={
                  {
                    "borderRadius": 11.88,
                    "height": 54,
                    "width": 54,
                  }
                }
              />
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#fafafa",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(250,250,250,0.7)",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "rgba(250,250,250,0.7)",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="rgba(250,250,250,0.7)"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "rgba(255,255,255,0.06)",
                      "borderColor": "rgba(255,255,255,0.12)",
                      "borderRadius": 14,
                      "color": "#fafafa",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "rgba(250,250,250,0.7)",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="rgba(250,250,250,0.7)"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "rgba(255,255,255,0.06)",
                      "borderColor": "rgba(255,255,255,0.12)",
                      "borderRadius": 14,
                      "color": "#fafafa",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#a5f3fc",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.12)",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "rgba(250,250,250,0.7)",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.12)",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#a855f7",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#a855f7",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`sign-in in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <Image
                accessibilityLabel="Expyrico"
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../apps/mobile/assets/logo-mark.png",
                  }
                }
                style={
                  {
                    "borderRadius": 11.88,
                    "height": 54,
                    "width": 54,
                  }
                }
              />
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1d1b20",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "#65558f",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#65558f"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e0e0e0",
                      "borderRadius": 16,
                      "color": "#1d1b20",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#65558f"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e0e0e0",
                      "borderRadius": 16,
                      "color": "#1d1b20",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#7c4dff",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e0e0e0",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#65558f",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e0e0e0",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#65558f",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
